# cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  shell.nix
ercp_cli/: Cargo.toml  README.md
ercp_cli/src/: lib.rs  main.rs  opts.rs  router.rs
ercp_device/: Cargo.toml
ercp_device/src/: error.rs  lib.rs
ercp_gui/: Cargo.toml
ercp_gui/src/: lib.rs  main.rs
src/: lib.rs  main.rs  opts.rs  router.rs
