[package]
name = "ercp_cli"
version = "0.1.0"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
structopt = "0.3.21"
ercp_device = { path = "../ercp_device" }
chrono = "0.4.19"
hex = "0.4.3"

[[bin]]
name = "ercp"
path = "src/main.rs"
