[package]
name = "ercp_cli"
version = "0.1.0-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
colored = "2.0.0"
chrono = "0.4.19"
clap = { version = "3.1.0", features = ["derive"] }
ercp_device = { path = "../ercp_device" }
hex = "0.4.3"

[[bin]]
name = "ercp"
path = "src/main.rs"
