[package]
name = "ercp_device"
version = "0.1.0-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
rust-version = "1.59.0"

[dependencies]
serialport = "4.0.1"

[dependencies.ercp_basic]
git = "https://github.com/ercp/ercp_basic.rs.git"
branch = "develop"
features = ["serial-host"]
